--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -16,32 +16,48 @@
                 </h2>
 
                 <!-- Formulario de contacto -->
-                <form>
+                {% if 'ok' in request.GET %}
+                <p>
+                 Su mensaje se ha enviado correctamente, en breve nos pondremos en contacto con usted.
+                </p>
+                {% endif %}
+                <form method="POST" action="">
+                {% csrf_token %}
                     <div class="form-group">
                         <label>Nombre *</label>
                         <div class="input-group">
-                            <input type="text" class="form-control">
+                            {% comment %} <input type="text" class="form-control"> {% endcomment %}
+                            {{form.name}}
                         </div>
+                        {{form.name.errors}}
                     </div>
                     <div class="form-group">
                         <label>Email *</label>
                         <div class="input-group">
-                            <input type="text" class="form-control">
+                            {% comment %} <input type="text" class="form-control"> {% endcomment %}
+                            {{form.email}}
                         </div>
-                        <ul class="errorlist">
-                            <li>El email no es correcto.</li>
-                        </ul>
+                        {{form.email.errors}}
                     </div>
                     <div class="form-group">
                         <label>Mensaje *</label>
                         <div class="input-group">
-                            <textarea class="form-control"></textarea>
+                            {% comment %} <textarea class="form-control"></textarea> {% endcomment %}
+                            {{form.content}}
                         </div>
+                        {{form.content.errors}}
                     </div>
                     <div class="text-center">
                         <input type="submit" class="btn btn-primary btn-block py-2" value="Enviar">
                     </div>
-                </form>
+                </form> 
+                <!--form action="" method="POST">
+                {% csrf_token %}
+                  <table>
+                    {{form.as_table}}
+                  </table>
+                  <input type="submit" class="btn btn-primary btn-block py-2" value="Enviar">
+                </form-->
                 <!-- Fin formulario de contacto -->
 
               </div>
